--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">DriveSafe Hero</string>
+    <string name="google_maps_key">AIzaSyBTHEMtmkHbRa2F0Wv3CpbC4ZvYkP-7wXw</string>
 </resources>
